@@ -1,3 +1,7 @@
+2008-01-19 Harri Pitkänen <hatapitk@iki.fi>
+
+        * Standalone extension support for OS X 10.5.
+
 2008-01-18 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Makefile support for OS X 10.5 (Intel).
